Fix overlapping search icon

--- a/src/main/webapp/assets/css/style.css
+++ b/src/main/webapp/assets/css/style.css
@@ -40,7 +40,6 @@ nav div {
 	background: url("images/search-icon.png") center no-repeat;
 	opacity: 0.5;
 	border-radius: 5px;
-	position: absolute;
 	margin-left: 5px;
 	height: 25px;
 	width: 25px;
